--- a/0712.md
+++ b/0712.md
@@ -1,4 +1,4 @@
-## Memoization
+## RECURSION --> Memoization
 
 when using recursion, you might be computing the result for previously computed inputs.
 EX) fib(5) = fib(4) + fib(3)
@@ -35,3 +35,30 @@ grabbing memo 2
 computed fib(4) {2: 1, 3: 2, 4: 3} 3
 grabbing memo 3
 computed fib(5) {2: 1, 3: 2, 4: 3, 5: 5} 5
+
+# MATRIX
+
+m = (
+[['Mon',18,20,22,17],
+    ['Tue',11,18,21,18],
+    ['Wed',15,21,20,19],
+    ['Thu',11,20,22,21],
+    ['Fri',18,17,23,22],
+    ['Sat',12,22,20,18],
+   ['Sun',13,15,19,16]])
+
+### copying
+
+```python
+    copied_matrix = [row[:] for row in m]
+    m.append(["holiday",192,212,31,2123])
+    print(copied_matrix) # hard copy --> does not include ["holiday",192,212,31,2123]
+    print(m)
+```
+
+### transposing(setting col to rows and rows to cols)
+
+```python
+    transposed_matrix = zip(*m)
+    print(list(transposed_matrix))
+```
