things i learned on 07.12

--- a/0712.md
+++ b/0712.md
@@ -62,3 +62,7 @@ m = (
     transposed_matrix = zip(*m)
     print(list(transposed_matrix))
 ```
+
+### sorting
+
+- the sorting algorithm for python is called Tim Sort time complexity is O(NlogN)
