--- a/0713.md
+++ b/0713.md
@@ -79,19 +79,6 @@ class LinkedList:
             linkedList += f"{current.value} -> "
             current = current.next
         return linkedList
-
-A = LinkedList()
-A.append(Node(1))
-A.append(Node(2))
-A.append(Node(3))
-A.append(Node(3))
-A.addFirst(Node(0))
-A.pop()
-A.remove(2)
-print(A)
-print(A.contains(None))
-len(A)
-
 ```
 
 ### Floyd's Tortoise and Hare AKA Cycle Detection Algorithm
@@ -108,4 +95,168 @@ def hasCycle(self, head: Optional[ListNode]) -> bool:
         if slow == fast:
             return True
     return False
+```
+
+### Stack
+
+- list implementation
+
+```python
+class Stack():
+    def __init__(self):
+        self.stack = []
+
+    def push(self,val):
+        self.stack.append(val)
+
+    def pop(self):
+        if len(self.stack)>1:
+            self.stack.pop()
+            return
+        print("Stack is Empty")
+
+    def isEmpty(self):
+        return True if len(self.stack) == 0 else False
+
+    def search(self,val):
+        for (index,value) in self.stack:
+            if value == val:
+                return index
+        return -1
+
+    def peek(self):
+        if len(self.stack) > 1:
+            return (self.stack[-1])
+        return -1
+    def __str__(self):
+        return(f"{self.stack}")
+```
+
+- linked list implementation
+
+```python
+class Node:
+    def __init__(self,val):
+        self.val = val
+        self.next = None
+
+class Stack:
+    def __init__(self):
+        self.head = None
+
+    def push(self,node):
+        current = self.head
+        if not current:
+            self.head = node
+            return
+        while current.next:
+            current = current.next
+        current.next = node
+
+    def pop(self):
+        current = self.head
+        if not current:
+            return -1
+        if not current.next:
+            self.head = None
+            return
+        while current.next.next:
+            current = current.next
+        current.next = None
+
+    def isEmpty(self):
+        return True if self.head else False
+
+    def search(self,val):
+        current = self.head
+        while current:
+            if current.val == val:
+                return True
+            current = current.next
+        return False
+
+    def __str__(self):
+        current = self.head
+        res = ""
+        while current:
+            res += f"{current.val} -> "
+            current = current.next
+        return res
+
+```
+
+### Queue
+
+- list implementation
+
+```python
+class Queue():
+    def __init__(self):
+        self.queue = []
+
+    def enqueue(self,val):
+        self.queue.insert(0,val)
+
+    def dequeue(self):
+        if len(self.queue) > 1 :
+            self.queue.pop()
+
+    def front(self):
+        return (self.queue[0]) if len(self.queue) > 1  else -1
+
+    def back(self):
+        return (self.queue[-1]) if len(self.queue) > 1 else -1
+
+    def isEmpty(self):
+        return len(self.queue)>1
+
+        return (f"{self.queue}")
+    def __str__(self):
+```
+
+- class implementation
+
+```python
+class Node():
+    def __init__(self,val):
+        self.val = val
+        self.next = None
+
+class Queue():
+    def __init__(self):
+        self.head = None
+
+    def enqueue(self,node):
+        node.next = self.head
+        self.head = node
+
+    def dequeue(self):
+        current = self.head
+        if not current:
+            return
+        if current.next == None:
+            self.head = None
+            return
+        while current.next.next:
+            current = current.next
+        current.next = None
+
+    def front(self):
+        return self.head.val if self.head else "does not exist"
+
+    def back(self):
+        current = self.head
+        if not current:
+            return "does not exist"
+        while current.next:
+            current = current.next
+        return current.val
+
+    def __str__(self):
+        current = self.head
+        res = ""
+        while current:
+            res += f"{current.val} -> "
+            current = current.next
+        return res
 ```
