--- a/0715.md
+++ b/0715.md
@@ -117,3 +117,41 @@ return it --> 4
 final list
 | 1 | 2 | 3 |
 | --- | --- | --- |
+
+# Binary Search
+
+iterative
+
+```python
+def binSearch(arr,x):
+    left = 0
+    right = len(arr) - 1
+
+    while left <= right:
+        mid = (left + right) // 2
+        if mid < x:
+            left = mid + 1
+        elif mid > x:
+            right = mid - 1
+        else:
+            return (mid)
+    return -1
+
+
+```
+
+recursive approach
+
+```python
+def binSearch(arr,left,right,x):
+    while left<=right:
+        mid = (right + left ) //2
+        if arr[mid] > x:
+            return binSearch(arr,left,mid-1,x)
+        elif arr[mid] < x:
+            return binSearch(arr,mid + 1, right,x)
+        return mid
+    return -1
+binSearch([2,3,4,10,40],0,4,10)
+
+```
