--- a/0719.md
+++ b/0719.md
@@ -94,6 +94,8 @@ heap_sort([4, 1, 7, 3, 8, 5])
 
 # Trie
 
+Tree like data structure where the nodes of a tree store the entire alphabet, and strings and words can be retrieved by traversing down a path of a tree
+
 ```python
 class Trie:
     def __init__(self):
