--- a/DataStructures/Algorithm/0717.md
+++ b/DataStructures/Algorithm/0717.md
@@ -1,6 +1,6 @@
 # Trees
 
-![tree](./imgs/0717.png)
+![tree](./../../imgs/0717.png)
 DFS: A B C H D I J M E G K F L  
 BFS: A B C D E F G H I J K L M
 
