--- a/FrontEndDev/0623.md
+++ b/FrontEndDev/0623.md
@@ -1,7 +1,8 @@
-1. adding whitespace 
+1. adding whitespace
 
-For tailwindcss add whitespace-pre-line to add additional spacing. Remeber to add \n 
+For tailwindcss add whitespace-pre-line to add additional spacing. Remeber to add \n
 
+```tsx
  prof: {
     name: "송한호",
     position: "Co-Founder/Advisor",
@@ -10,3 +11,4 @@ For tailwindcss add whitespace-pre-line to add additional spacing. Remeber to ad
   },
 
   <div className="text-sm whitespace-pre-line">{Mem[name].description}</div>
+```
